Added original-ish pft designations and fixed akveg trace species

--- a/neon/standardize_neon.ipynb
+++ b/neon/standardize_neon.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 114,
    "id": "ebe57879-c575-4632-8e68-74e72fe6f0db",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 115,
    "id": "77548174-b901-4e02-a5bd-d2798e2bf4de",
    "metadata": {},
    "outputs": [],
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 116,
    "id": "4f29916b-7256-4565-a89f-2bc22f72b585",
    "metadata": {},
    "outputs": [],
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 117,
    "id": "ed520418-515e-4d2d-afdd-df7b98227c32",
    "metadata": {},
    "outputs": [],
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 118,
    "id": "fdd4f4c9-1d78-49d4-a105-fc32347e16af",
    "metadata": {},
    "outputs": [
@@ -198,7 +198,7 @@
        "2           0.5  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 119,
    "id": "1e81abe9-023a-4ff2-bba7-cdbf0b520822",
    "metadata": {},
    "outputs": [
@@ -273,7 +273,7 @@
        "2  BARR_003.basePlot.div.32.4.1           Eriophorum sp.           0.5"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 120,
    "id": "e4e79b78-a122-46e8-a366-2753060b4f80",
    "metadata": {},
    "outputs": [
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 121,
    "id": "1c5ef908-8ec9-4ad3-820c-d4c248634cca",
    "metadata": {},
    "outputs": [
@@ -416,7 +416,7 @@
        "2  Dillman et al. 2012   species      lichen       lichen  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 122,
    "id": "ed04ae66-b596-4bcd-bda4-9819a47be4c6",
    "metadata": {},
    "outputs": [
@@ -482,7 +482,7 @@
        "2           Eriophorum sp."
       ]
      },
-     "execution_count": 9,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 123,
    "id": "7add8ae9-c2f4-491c-bf96-3acde27112b8",
    "metadata": {},
    "outputs": [
@@ -570,7 +570,7 @@
        "2               Eriophorum sp.    Eriophorum sp.    graminoid"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 124,
    "id": "76c312d0-ad0a-4804-9119-cd1c62dc75ab",
    "metadata": {},
    "outputs": [
@@ -647,7 +647,7 @@
        "2           Eriophorum sp.    Eriophorum sp."
       ]
      },
-     "execution_count": 11,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 125,
    "id": "884d6474-fca1-4c9b-a137-20a3612d73cd",
    "metadata": {},
    "outputs": [],
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 126,
    "id": "58dc936e-ef05-48c1-ac28-5a76e7ed2744",
    "metadata": {},
    "outputs": [
@@ -734,7 +734,7 @@
        "2     deciduous  Vaccinium uliginosum"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 127,
    "id": "81c9b832-465e-4139-b2fa-8f0095f078f1",
    "metadata": {},
    "outputs": [
@@ -810,7 +810,7 @@
        "2           Eriophorum sp.    Eriophorum sp.    graminoid              "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 128,
    "id": "61bc9738-4ace-483f-a883-b78d5225326d",
    "metadata": {},
    "outputs": [
@@ -834,7 +834,7 @@
        "['graminoid', nan, 'forb', 'shrub', 'spore-bearing']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 129,
    "id": "562082ce-a87b-441f-9aa7-f70489994b8b",
    "metadata": {},
    "outputs": [],
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 130,
    "id": "9fcd3119-39fe-47b8-9b67-b309ef719e74",
    "metadata": {},
    "outputs": [
@@ -880,7 +880,7 @@
        "True"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -934,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 131,
    "id": "f9ba4445-418f-419c-bfc3-5c8f514dd4d2",
    "metadata": {},
    "outputs": [],
@@ -954,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 132,
    "id": "4d3b73f9-b6d8-444b-b21c-1bfc9f365b08",
    "metadata": {},
    "outputs": [
@@ -976,7 +976,7 @@
        " 'water']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -988,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 133,
    "id": "94664ec4-91b7-479c-9629-6bffdef32a1e",
    "metadata": {},
    "outputs": [],
@@ -1012,7 +1012,7 @@
     "            new_habit = 'forb'\n",
     "        elif 'litter' in habit or 'scat' in habit:\n",
     "            new_habit = 'litter'\n",
-    "        elif 'bare ground' in habit or 'crust' in habit or 'mineral' in habit or 'soil' in habit:\n",
+    "        elif 'rock' in habit or 'soil' in habit:\n",
     "            new_habit = 'bare ground'\n",
     "            \n",
     "        # shrubs\n",
@@ -1028,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 134,
    "id": "3a982b51-a464-43b4-90d5-f498d4eb1c12",
    "metadata": {},
    "outputs": [
@@ -1062,7 +1062,7 @@
        "      <th></th>\n",
        "      <th>datasetSpeciesName</th>\n",
        "      <th>joinKey</th>\n",
-       "      <th>speciesHabit</th>\n",
+       "      <th>nonstandardHabit</th>\n",
        "      <th>leafRetention</th>\n",
        "      <th>speciesStature</th>\n",
        "      <th>standardHabit</th>\n",
@@ -1106,13 +1106,13 @@
        "104                Anemone parviflora Michx.       Anemone parviflora   \n",
        "29   Arctagrostis latifolia (R. Br.) Griseb.   Arctagrostis latifolia   \n",
        "\n",
-       "    speciesHabit leafRetention speciesStature standardHabit  \n",
-       "36     graminoid           NaN            NaN     graminoid  \n",
-       "104         forb           NaN            NaN          forb  \n",
-       "29     graminoid           NaN            NaN     graminoid  "
+       "    nonstandardHabit leafRetention speciesStature standardHabit  \n",
+       "36         graminoid           NaN            NaN     graminoid  \n",
+       "104             forb           NaN            NaN          forb  \n",
+       "29         graminoid           NaN            NaN     graminoid  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1122,6 +1122,7 @@
     "standard_habit_col = standardize_habit(all_habits['speciesHabit'], \n",
     "                                       all_habits['leafRetention'])\n",
     "all_habits['standardHabit'] = standard_habit_col\n",
+    "all_habits.rename(columns={'speciesHabit':'nonstandardHabit'}, inplace=True)\n",
     "print(len(all_habits))\n",
     "all_habits.head(3)"
    ]
@@ -1137,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 135,
    "id": "cefd30c0-a670-4295-8eef-18f822821599",
    "metadata": {},
    "outputs": [
@@ -1165,6 +1166,7 @@
        "      <th>plotName</th>\n",
        "      <th>datasetSpeciesName</th>\n",
        "      <th>standardHabit</th>\n",
+       "      <th>nonstandardHabit</th>\n",
        "      <th>percentCover</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1174,6 +1176,7 @@
        "      <td>BARR_003.basePlot.div.32.2.1</td>\n",
        "      <td>Dupontia fisheri R. Br.</td>\n",
        "      <td>graminoid</td>\n",
+       "      <td>graminoid</td>\n",
        "      <td>0.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1181,12 +1184,14 @@
        "      <td>BARR_003.basePlot.div.32.4.1</td>\n",
        "      <td>Dupontia fisheri R. Br.</td>\n",
        "      <td>graminoid</td>\n",
+       "      <td>graminoid</td>\n",
        "      <td>0.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>BARR_006.basePlot.div.31.1.1</td>\n",
        "      <td>Dupontia fisheri R. Br.</td>\n",
+       "      <td>graminoid</td>\n",
        "      <td>graminoid</td>\n",
        "      <td>7.0</td>\n",
        "    </tr>\n",
@@ -1200,32 +1205,33 @@
        "1  BARR_003.basePlot.div.32.4.1  Dupontia fisheri R. Br.     graminoid   \n",
        "2  BARR_006.basePlot.div.31.1.1  Dupontia fisheri R. Br.     graminoid   \n",
        "\n",
-       "   percentCover  \n",
-       "0           0.5  \n",
-       "1           0.5  \n",
-       "2           7.0  "
+       "  nonstandardHabit  percentCover  \n",
+       "0        graminoid           0.5  \n",
+       "1        graminoid           0.5  \n",
+       "2        graminoid           7.0  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# loop through each plot and sum fcover per pft\n",
-    "all_habits = all_habits[['datasetSpeciesName', 'standardHabit']]\n",
+    "all_habits = all_habits[['datasetSpeciesName', 'standardHabit', 'nonstandardHabit']]\n",
     "species_fcover = fcover.merge(all_habits, \n",
     "                              left_on='datasetSpeciesName', \n",
     "                              right_on='datasetSpeciesName')\n",
     "species_fcover = species_fcover[species_fcover['percentCover'].notna() & (species_fcover['percentCover'] != 0)]\n",
-    "species_fcover = species_fcover[['plotName', 'datasetSpeciesName', 'standardHabit', 'percentCover']]\n",
+    "species_fcover = species_fcover[['plotName', 'datasetSpeciesName', 'standardHabit', \n",
+    "                                 'nonstandardHabit', 'percentCover']]\n",
     "species_fcover['standardHabit'] = species_fcover['standardHabit'].replace('fungus', 'other')\n",
     "species_fcover.head(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 136,
    "id": "f5646d2f-cd44-4a06-9a12-8afbf152c21e",
    "metadata": {},
    "outputs": [],
@@ -1236,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 137,
    "id": "e111d602-d096-440a-b352-b784039274fd",
    "metadata": {},
    "outputs": [],
@@ -1249,7 +1255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 138,
    "id": "98492580-a8a9-47c2-be8d-92f56eb191b0",
    "metadata": {},
    "outputs": [
@@ -1283,12 +1289,10 @@
        "      <th>lichen</th>\n",
        "      <th>litter</th>\n",
        "      <th>other</th>\n",
-       "      <th>rock</th>\n",
        "      <th>water</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>plotName</th>\n",
-       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -1311,9 +1315,8 @@
        "      <td>6.5</td>\n",
        "      <td>8.0</td>\n",
        "      <td>0.5</td>\n",
-       "      <td>6.5</td>\n",
-       "      <td>12.5</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>18.5</td>\n",
+       "      <td>0.5</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1325,9 +1328,8 @@
        "      <td>1.5</td>\n",
        "      <td>9.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>8.5</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>0.5</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1339,9 +1341,8 @@
        "      <td>0.0</td>\n",
        "      <td>13.5</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>78.0</td>\n",
-       "      <td>9.5</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>87.0</td>\n",
+       "      <td>0.5</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1361,14 +1362,14 @@
        "BARR_001.basePlot.div.32.2.1              0.0   1.5        9.0     1.0   \n",
        "BARR_001.basePlot.div.32.4.1              0.0   0.0       13.5     0.0   \n",
        "\n",
-       "                              litter  other  rock  water  \n",
-       "plotName                                                  \n",
-       "BARR_001.basePlot.div.31.1.1     6.5   12.5   0.0    0.0  \n",
-       "BARR_001.basePlot.div.32.2.1     8.5    8.0   0.0    0.0  \n",
-       "BARR_001.basePlot.div.32.4.1    78.0    9.5   0.0    1.0  "
+       "                              litter  other  water  \n",
+       "plotName                                            \n",
+       "BARR_001.basePlot.div.31.1.1    18.5    0.5    0.0  \n",
+       "BARR_001.basePlot.div.32.2.1    16.0    0.5    0.0  \n",
+       "BARR_001.basePlot.div.32.4.1    87.0    0.5    1.0  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1392,7 +1393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 139,
    "id": "6791825e-04f8-49f8-b888-e1c6d9049375",
    "metadata": {},
    "outputs": [],
@@ -1407,7 +1408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 140,
    "id": "3966ee2f-2807-487d-92d9-97722da58f66",
    "metadata": {},
    "outputs": [],
@@ -1418,7 +1419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 141,
    "id": "c79f389f-f8f6-44e9-96c4-4ef53c1ff6ca",
    "metadata": {},
    "outputs": [
@@ -1486,10 +1487,10 @@
        "      <td>97.5</td>\n",
        "      <td>97.0</td>\n",
        "      <td>0.5</td>\n",
-       "      <td>6.5</td>\n",
+       "      <td>18.5</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>12.5</td>\n",
+       "      <td>0.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>BARR_001.basePlot.div.32.2.1</th>\n",
@@ -1502,10 +1503,10 @@
        "      <td>97.0</td>\n",
        "      <td>96.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>8.5</td>\n",
+       "      <td>16.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>8.0</td>\n",
+       "      <td>0.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>BARR_001.basePlot.div.32.4.1</th>\n",
@@ -1518,10 +1519,10 @@
        "      <td>15.0</td>\n",
        "      <td>15.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>78.0</td>\n",
+       "      <td>87.0</td>\n",
        "      <td>0.5</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>9.5</td>\n",
+       "      <td>0.5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1548,12 +1549,12 @@
        "\n",
        "                              litter  bare ground  water  other  \n",
        "plotName                                                         \n",
-       "BARR_001.basePlot.div.31.1.1     6.5          0.0    0.0   12.5  \n",
-       "BARR_001.basePlot.div.32.2.1     8.5          0.0    0.0    8.0  \n",
-       "BARR_001.basePlot.div.32.4.1    78.0          0.5    1.0    9.5  "
+       "BARR_001.basePlot.div.31.1.1    18.5          0.0    0.0    0.5  \n",
+       "BARR_001.basePlot.div.32.2.1    16.0          0.0    0.0    0.5  \n",
+       "BARR_001.basePlot.div.32.4.1    87.0          0.5    1.0    0.5  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1608,7 +1609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 142,
    "id": "715535ea-5ec0-4b56-b463-defcfc3cf678",
    "metadata": {},
    "outputs": [],
@@ -1629,7 +1630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 143,
    "id": "f066abbc-4770-465c-a6e8-8c7930e6ad72",
    "metadata": {},
    "outputs": [],
@@ -1647,7 +1648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 144,
    "id": "f9266660-82eb-49a0-83ea-69ac4d4f16de",
    "metadata": {},
    "outputs": [],
@@ -1688,7 +1689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 145,
    "id": "a67e6dd3-af8d-4f8a-8743-d9ff2de99516",
    "metadata": {},
    "outputs": [],
@@ -1707,7 +1708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 146,
    "id": "cfef4685-4ea1-4fd5-a58c-8e1d6fb4a6b9",
    "metadata": {},
    "outputs": [],
@@ -1738,7 +1739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 147,
    "id": "688c77b4-6af5-4bfb-b560-1f55d21d0a40",
    "metadata": {},
    "outputs": [],
@@ -1761,7 +1762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 148,
    "id": "5401ddc4-7cd5-4610-858d-a19d1d70fac6",
    "metadata": {},
    "outputs": [
@@ -1797,7 +1798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 149,
    "id": "1ccdcfc5-16b2-4ff6-875b-14308687bab7",
    "metadata": {},
    "outputs": [],
@@ -1830,7 +1831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 150,
    "id": "5c118237-5023-4dc2-8e07-fb57196f3c20",
    "metadata": {},
    "outputs": [
@@ -1849,7 +1850,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1860,7 +1861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 151,
    "id": "830f8769-4fc5-4e8b-8085-144522aeae65",
    "metadata": {},
    "outputs": [],
