--- a/abr/standardize_abr.ipynb
+++ b/abr/standardize_abr.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 58,
    "id": "6a653972-658e-4613-aa24-fd5d6303244a",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 59,
    "id": "c202f396-f35e-44ad-8174-075617eeb6a2",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 60,
    "id": "998917f1-800a-4dfb-a563-f936641a0d02",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 61,
    "id": "fc0c373f-d848-49bc-b2ae-db7f979730ba",
    "metadata": {},
    "outputs": [],
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 62,
    "id": "a0a9a9e2-1201-4317-b939-eb858bba0ffc",
    "metadata": {},
    "outputs": [
@@ -188,7 +188,7 @@
        "2  120712b1       Carex bigelowii          11.26           True"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 63,
    "id": "3c043b57-60be-42bd-b7f3-e9081ff5fbda",
    "metadata": {},
    "outputs": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 64,
    "id": "c07983a4-0d26-4cae-ae06-37051192cbdb",
    "metadata": {},
    "outputs": [
@@ -330,7 +330,7 @@
        "2  Dillman et al. 2012   species      lichen       lichen  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 65,
    "id": "1138af7a-9288-4826-9e47-320ffe99af16",
    "metadata": {},
    "outputs": [
@@ -396,7 +396,7 @@
        "2       Carex bigelowii"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 66,
    "id": "ec194035-e431-424a-a80e-abc2fa5fc2e9",
    "metadata": {},
    "outputs": [
@@ -484,7 +484,7 @@
        "2           Carex bigelowii       Carex bigelowii    graminoid"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 67,
    "id": "6be75ab6-3f83-4a10-a753-dd7c2d79fc08",
    "metadata": {},
    "outputs": [
@@ -561,7 +561,7 @@
        "2       Carex bigelowii       Carex bigelowii"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 68,
    "id": "e63eab71-0999-4c19-af9d-36a00aa49c00",
    "metadata": {},
    "outputs": [],
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 69,
    "id": "19164aaf-4110-4d24-b559-7b3b2363e9ae",
    "metadata": {},
    "outputs": [
@@ -648,7 +648,7 @@
        "2     deciduous  Vaccinium uliginosum"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 70,
    "id": "71e3e7f3-5c1c-46f9-9c3e-1da1bfaa277c",
    "metadata": {},
    "outputs": [
@@ -724,7 +724,7 @@
        "2       Carex bigelowii       Carex bigelowii    graminoid              "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 71,
    "id": "8f598c7b-3040-4760-a726-dc9d87f813a2",
    "metadata": {},
    "outputs": [
@@ -755,7 +755,7 @@
        " 'liverwort']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -777,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 72,
    "id": "f663fbf8-dadc-4b87-bb1a-c0fc0ddc2799",
    "metadata": {},
    "outputs": [],
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 73,
    "id": "30d731f1-5410-4a6c-a872-2b157d5da9d8",
    "metadata": {},
    "outputs": [
@@ -801,7 +801,7 @@
        "True"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 74,
    "id": "eddb6a25-ab52-422b-a88e-a21110670c4a",
    "metadata": {},
    "outputs": [],
@@ -875,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 75,
    "id": "bf32d88e-1d5c-437d-bdca-0b23da15af88",
    "metadata": {},
    "outputs": [
@@ -899,7 +899,7 @@
        " 'water']"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -911,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 76,
    "id": "1e6e26a2-33dc-42f6-ab58-76b1ad4844fc",
    "metadata": {},
    "outputs": [],
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 77,
    "id": "6a3fd17d-ebf9-4855-8c69-ba2ebd85418a",
    "metadata": {},
    "outputs": [
@@ -985,7 +985,7 @@
        "      <th></th>\n",
        "      <th>datasetSpeciesName</th>\n",
        "      <th>joinKey</th>\n",
-       "      <th>speciesHabit</th>\n",
+       "      <th>nonstandardHabit</th>\n",
        "      <th>leafRetention</th>\n",
        "      <th>speciesStature</th>\n",
        "      <th>standardHabit</th>\n",
@@ -1024,18 +1024,18 @@
        "</div>"
       ],
       "text/plain": [
-       "       datasetSpeciesName               joinKey speciesHabit leafRetention  \\\n",
-       "301  Achillea millefolium  Achillea millefolium         forb           NaN   \n",
-       "298         Agropyron sp.         Agropyron sp.    graminoid           NaN   \n",
-       "168   Alectoria nigricans   Alectoria nigricans       lichen           NaN   \n",
+       "       datasetSpeciesName               joinKey nonstandardHabit  \\\n",
+       "301  Achillea millefolium  Achillea millefolium             forb   \n",
+       "298         Agropyron sp.         Agropyron sp.        graminoid   \n",
+       "168   Alectoria nigricans   Alectoria nigricans           lichen   \n",
        "\n",
-       "    speciesStature standardHabit  \n",
-       "301            NaN          forb  \n",
-       "298            NaN     graminoid  \n",
-       "168            NaN        lichen  "
+       "    leafRetention speciesStature standardHabit  \n",
+       "301           NaN            NaN          forb  \n",
+       "298           NaN            NaN     graminoid  \n",
+       "168           NaN            NaN        lichen  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1045,6 +1045,7 @@
     "standard_habit_col = standardize_habit(all_habits['speciesHabit'], \n",
     "                                       all_habits['leafRetention'])\n",
     "all_habits['standardHabit'] = standard_habit_col\n",
+    "all_habits.rename(columns={'speciesHabit':'nonstandardHabit'}, inplace=True)\n",
     "print(len(all_habits))\n",
     "all_habits.head(3)"
    ]
@@ -1060,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 78,
    "id": "7d4008ff-682c-4f8c-83b8-001a75ee608d",
    "metadata": {},
    "outputs": [
@@ -1204,7 +1205,7 @@
        "[2761 rows x 4 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1215,7 +1216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 79,
    "id": "8602e05c-244d-4f5a-90f0-129181482de6",
    "metadata": {},
    "outputs": [
@@ -1244,6 +1245,7 @@
        "      <th>percentCover</th>\n",
        "      <th>datasetSpeciesName</th>\n",
        "      <th>standardHabit</th>\n",
+       "      <th>nonstandardHabit</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1253,12 +1255,14 @@
        "      <td>18.54</td>\n",
        "      <td>Litter</td>\n",
        "      <td>litter</td>\n",
+       "      <td>litter</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>120713a1</td>\n",
        "      <td>77.78</td>\n",
        "      <td>Litter</td>\n",
+       "      <td>litter</td>\n",
        "      <td>litter</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1267,26 +1271,27 @@
        "      <td>32.67</td>\n",
        "      <td>Litter</td>\n",
        "      <td>litter</td>\n",
+       "      <td>litter</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   plotName  percentCover datasetSpeciesName standardHabit\n",
-       "0  120712b1         18.54             Litter        litter\n",
-       "1  120713a1         77.78             Litter        litter\n",
-       "2  120713b1         32.67             Litter        litter"
+       "   plotName  percentCover datasetSpeciesName standardHabit nonstandardHabit\n",
+       "0  120712b1         18.54             Litter        litter           litter\n",
+       "1  120713a1         77.78             Litter        litter           litter\n",
+       "2  120713b1         32.67             Litter        litter           litter"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# loop through each plot and sum fcover per pft\n",
-    "all_habits = all_habits[['datasetSpeciesName', 'standardHabit']]\n",
+    "all_habits = all_habits[['datasetSpeciesName', 'standardHabit', 'nonstandardHabit']]\n",
     "species_fcover = fcover.merge(all_habits,\n",
     "                              left_on='veg_taxonomy',\n",
     "                              right_on='datasetSpeciesName')\n",
@@ -1297,7 +1302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 80,
    "id": "1db0776d-7904-4a69-b5d5-ff8c0298115c",
    "metadata": {},
    "outputs": [
@@ -1325,6 +1330,7 @@
        "      <th>plotName</th>\n",
        "      <th>datasetSpeciesName</th>\n",
        "      <th>standardHabit</th>\n",
+       "      <th>nonstandardHabit</th>\n",
        "      <th>percentCover</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1334,12 +1340,14 @@
        "      <td>120712b1</td>\n",
        "      <td>Litter</td>\n",
        "      <td>litter</td>\n",
+       "      <td>litter</td>\n",
        "      <td>18.54</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>120713a1</td>\n",
        "      <td>Litter</td>\n",
+       "      <td>litter</td>\n",
        "      <td>litter</td>\n",
        "      <td>77.78</td>\n",
        "    </tr>\n",
@@ -1348,6 +1356,7 @@
        "      <td>120713b1</td>\n",
        "      <td>Litter</td>\n",
        "      <td>litter</td>\n",
+       "      <td>litter</td>\n",
        "      <td>32.67</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1355,27 +1364,28 @@
        "</div>"
       ],
       "text/plain": [
-       "   plotName datasetSpeciesName standardHabit  percentCover\n",
-       "0  120712b1             Litter        litter         18.54\n",
-       "1  120713a1             Litter        litter         77.78\n",
-       "2  120713b1             Litter        litter         32.67"
+       "   plotName datasetSpeciesName standardHabit nonstandardHabit  percentCover\n",
+       "0  120712b1             Litter        litter           litter         18.54\n",
+       "1  120713a1             Litter        litter           litter         77.78\n",
+       "2  120713b1             Litter        litter           litter         32.67"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "species_fcover = species_fcover[species_fcover['percentCover'].notna() & (species_fcover['percentCover'] != 0)]\n",
-    "species_fcover = species_fcover[['plotName', 'datasetSpeciesName', 'standardHabit', 'percentCover']]\n",
+    "species_fcover = species_fcover[['plotName', 'datasetSpeciesName', 'standardHabit', \n",
+    "                                 'nonstandardHabit', 'percentCover']]\n",
     "species_fcover['standardHabit'] = species_fcover['standardHabit'].replace('fungus', 'other')\n",
     "species_fcover.head(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 81,
    "id": "ec0a2d50-23e6-4a30-b57b-6507c2b29340",
    "metadata": {},
    "outputs": [],
@@ -1386,7 +1396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 82,
    "id": "a861771b-de62-4d13-85bb-364530ecc0e4",
    "metadata": {},
    "outputs": [],
@@ -1399,7 +1409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 83,
    "id": "9e3550cf-b881-46cb-b260-b36c2451b8f4",
    "metadata": {},
    "outputs": [
@@ -1507,7 +1517,7 @@
        "120713b1      14.66    8.66   32.67    0.0    0.0  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1522,7 +1532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 84,
    "id": "e73c007a-5d25-49e6-8b30-39ca42435e53",
    "metadata": {},
    "outputs": [],
@@ -1543,7 +1553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 85,
    "id": "6d8b748d-9388-431f-bd10-ccdc1f525476",
    "metadata": {},
    "outputs": [],
@@ -1557,7 +1567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 86,
    "id": "d6d99f14-ca53-4808-a5d0-53f8ad3258f3",
    "metadata": {},
    "outputs": [
@@ -1619,7 +1629,7 @@
        "120718a1    0.0          0.0"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1638,7 +1648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 87,
    "id": "f2ea2ffd-9b16-4cb5-9de4-5f657caf003b",
    "metadata": {},
    "outputs": [],
@@ -1652,7 +1662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 88,
    "id": "b873e7f3-a51e-48b3-9f9a-24daeb6cd272",
    "metadata": {},
    "outputs": [],
@@ -1663,7 +1673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 89,
    "id": "5bd352e9-5a95-4afe-8b46-a44237a6ba2d",
    "metadata": {},
    "outputs": [
@@ -1792,7 +1802,7 @@
        "120713b1    0.0         0.00  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1848,7 +1858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 90,
    "id": "dc8850b0-9b38-4626-a0d0-3e4dbaafc208",
    "metadata": {},
    "outputs": [],
@@ -1870,7 +1880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 91,
    "id": "5ffd8ab1-448e-46ba-a040-37731053f54b",
    "metadata": {},
    "outputs": [],
@@ -1910,7 +1920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 92,
    "id": "2d332108-1d86-4bf0-9788-ebd6f827522c",
    "metadata": {},
    "outputs": [],
@@ -1929,7 +1939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 93,
    "id": "6e5471ca-379d-4792-aee0-4304e58dff89",
    "metadata": {},
    "outputs": [],
@@ -1960,7 +1970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 94,
    "id": "a2bb00f9-ace1-49e5-8e38-9a56581ea1db",
    "metadata": {},
    "outputs": [],
@@ -1983,7 +1993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 95,
    "id": "e4e953f2-c0b0-464c-8daa-695fac09cfa9",
    "metadata": {},
    "outputs": [
@@ -2019,7 +2029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 96,
    "id": "39b5d95c-1498-4918-be5a-50b72ca158c5",
    "metadata": {},
    "outputs": [],
@@ -2052,7 +2062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 97,
    "id": "37273cc5-f43b-4149-89df-f234621ad610",
    "metadata": {},
    "outputs": [
@@ -2071,7 +2081,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2082,7 +2092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 98,
    "id": "61929b2f-a591-4435-82fd-04cd38f050b1",
    "metadata": {},
    "outputs": [],
