added plot_area, plot_shape, updated dds, fixed checklist

--- a/akveg/standardize_akveg.ipynb
+++ b/akveg/standardize_akveg.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
        "3   Cardamine bellidifolia    0.0  "
       ]
      },
-     "execution_count": 136,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
        "535"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
        "185"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
        "2  Dillman et al. 2012   species      lichen       lichen  "
       ]
      },
-     "execution_count": 142,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +468,7 @@
        "2  Cardamine bellidifolia"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +574,7 @@
        "2      Cardamine bellidifolia  Cardamine bellidifolia         forb"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +640,7 @@
        "2  Cardamine bellidifolia  Cardamine bellidifolia"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +724,7 @@
        "2     deciduous  Vaccinium uliginosum"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +799,7 @@
        "2  Cardamine bellidifolia  Cardamine bellidifolia         forb              "
       ]
      },
-     "execution_count": 149,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -813,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +829,7 @@
        " nan]"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -850,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -863,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -872,7 +872,7 @@
        "True"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -923,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -942,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -959,7 +959,7 @@
        " 'fungus']"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -971,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1006,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1089,7 +1089,7 @@
        "2           NaN            NaN          forb  "
       ]
      },
-     "execution_count": 156,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1114,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1181,7 +1181,7 @@
        "2  ADST-76          1.30   Arnica lessingii          forb             forb"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1199,7 +1199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1266,7 +1266,7 @@
        "2  ADST-76   Arnica lessingii          forb             forb          1.30"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1281,7 +1281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1291,7 +1291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1303,7 +1303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1395,7 +1395,7 @@
        "ADST-2       7.5    0.0  "
       ]
      },
-     "execution_count": 161,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1418,7 +1418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1431,7 +1431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1497,7 +1497,7 @@
        "FWMM-1            0.0  65.333333    2.0"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1519,7 +1519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1532,7 +1532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1542,7 +1542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1670,7 +1670,7 @@
        "ADST-2      14.000000    10.0    0.0  "
       ]
      },
-     "execution_count": 166,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1685,7 +1685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1694,7 +1694,7 @@
        "185"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1744,7 +1744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1758,7 +1758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1777,7 +1777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1790,8 +1790,37 @@
     "new_aux['surveyDay'] = aux['surveyDate'].dt.day.astype(int)\n",
     "\n",
     "# plot size\n",
-    "new_aux['plotRadius'] = aux['Plot Dimensions'].apply(lambda x: \n",
-    "                                                     re.findall(r'\\b\\d+\\b', x)[0]).astype(int)\n",
+    "new_aux['plotArea'] = aux['Plot Dimensions']\n",
+    "\n",
+    "# Extract plot shape and calculate plot size\n",
+    "def process_plot_dimensions(dimension):\n",
+    "    if 'radius' in dimension:\n",
+    "        # Extract radius and calculate area of the circle\n",
+    "        try:\n",
+    "            radius = float(dimension.split(' radius')[0].strip())\n",
+    "            area = np.pi * (radius**2)\n",
+    "            return {'plotShape': 'circle', 'plotArea': area}\n",
+    "        except ValueError:\n",
+    "            return {'plotShape': 'unknown', 'plotArea': np.NaN}\n",
+    "    elif 'x' in dimension:\n",
+    "        # Extract dimensions and calculate rectangular or square area\n",
+    "        try:\n",
+    "            dimensions = dimension.split('x')\n",
+    "            length = float(dimensions[0].strip())\n",
+    "            width = float(dimensions[1].strip())\n",
+    "            area = length * width\n",
+    "            shape = 'square' if length == width else 'rectangle'\n",
+    "            return {'plotShape': shape, 'plotArea': area}\n",
+    "        except (ValueError, IndexError):\n",
+    "            return {'plotShape': np.NaN, 'plotArea': np.NaN}\n",
+    "    else:\n",
+    "        # Unknown dimension format\n",
+    "        return {'plotShape': 'unknown', 'plotArea': dimension}\n",
+    "\n",
+    "# Apply function and update new_aux\n",
+    "processed_dimensions = aux['Plot Dimensions'].apply(process_plot_dimensions)\n",
+    "new_aux['plotShape'] = processed_dimensions.apply(lambda x: x['plotShape'])\n",
+    "new_aux['plotArea'] = processed_dimensions.apply(lambda x: x['plotArea'])\n",
     "\n",
     "# geographical information\n",
     "new_aux['latitudeY'] = aux['Latitude'].astype('Float32')\n",
@@ -1817,7 +1846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1835,7 +1864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1865,7 +1894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1886,7 +1915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1920,7 +1949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1952,7 +1981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1962,15 +1991,16 @@
        "       'evergreenTreeCover', 'forbCover', 'graminoidCover',\n",
        "       'nonvascularSumCover', 'bryophyteCover', 'lichenCover', 'otherCover',\n",
        "       'baregroundCover', 'litterCover', 'waterCover', 'surveyYear',\n",
-       "       'surveyMonth', 'surveyDay', 'plotRadius', 'latitudeY', 'longitudeX',\n",
-       "       'georefSource', 'georefAccuracy', 'coordEPSG', 'dataSubsource',\n",
-       "       'dataSource', 'dataSourceHtml', 'dataSubsourceCitation', 'surveyMethod',\n",
-       "       'fcoverScale', 'surveyPurpose', 'geometry', 'adminUnit', 'adminCountry',\n",
-       "       'fireYears', 'bioclimSubzone', 'duplicatedCoords', 'duplicatedDate'],\n",
+       "       'surveyMonth', 'surveyDay', 'plotArea', 'plotShape', 'latitudeY',\n",
+       "       'longitudeX', 'georefSource', 'georefAccuracy', 'coordEPSG',\n",
+       "       'dataSubsource', 'dataSource', 'dataSourceHtml',\n",
+       "       'dataSubsourceCitation', 'surveyMethod', 'fcoverScale', 'surveyPurpose',\n",
+       "       'geometry', 'adminUnit', 'adminCountry', 'fireYears', 'bioclimSubzone',\n",
+       "       'duplicatedCoords', 'duplicatedDate'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1981,7 +2011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
