--- a/abr/standardize_abr.ipynb
+++ b/abr/standardize_abr.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 42,
    "id": "6a653972-658e-4613-aa24-fd5d6303244a",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 43,
    "id": "c202f396-f35e-44ad-8174-075617eeb6a2",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 44,
    "id": "998917f1-800a-4dfb-a563-f936641a0d02",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 45,
    "id": "fc0c373f-d848-49bc-b2ae-db7f979730ba",
    "metadata": {},
    "outputs": [],
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 46,
    "id": "a0a9a9e2-1201-4317-b939-eb858bba0ffc",
    "metadata": {},
    "outputs": [
@@ -188,7 +188,7 @@
        "2  120712b1       Carex bigelowii          11.26           True"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 47,
    "id": "3c043b57-60be-42bd-b7f3-e9081ff5fbda",
    "metadata": {},
    "outputs": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 48,
    "id": "c07983a4-0d26-4cae-ae06-37051192cbdb",
    "metadata": {},
    "outputs": [
@@ -330,7 +330,7 @@
        "2  Dillman et al. 2012   species      lichen       lichen  "
       ]
      },
-     "execution_count": 64,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 49,
    "id": "1138af7a-9288-4826-9e47-320ffe99af16",
    "metadata": {},
    "outputs": [
@@ -396,7 +396,7 @@
        "2       Carex bigelowii"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 50,
    "id": "ec194035-e431-424a-a80e-abc2fa5fc2e9",
    "metadata": {},
    "outputs": [
@@ -484,7 +484,7 @@
        "2           Carex bigelowii       Carex bigelowii    graminoid"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 51,
    "id": "6be75ab6-3f83-4a10-a753-dd7c2d79fc08",
    "metadata": {},
    "outputs": [
@@ -561,7 +561,7 @@
        "2       Carex bigelowii       Carex bigelowii"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 52,
    "id": "e63eab71-0999-4c19-af9d-36a00aa49c00",
    "metadata": {},
    "outputs": [],
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 53,
    "id": "19164aaf-4110-4d24-b559-7b3b2363e9ae",
    "metadata": {},
    "outputs": [
@@ -648,7 +648,7 @@
        "2     deciduous  Vaccinium uliginosum"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 54,
    "id": "71e3e7f3-5c1c-46f9-9c3e-1da1bfaa277c",
    "metadata": {},
    "outputs": [
@@ -724,7 +724,7 @@
        "2       Carex bigelowii       Carex bigelowii    graminoid              "
       ]
      },
-     "execution_count": 70,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 55,
    "id": "8f598c7b-3040-4760-a726-dc9d87f813a2",
    "metadata": {},
    "outputs": [
@@ -755,7 +755,7 @@
        " 'liverwort']"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -777,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 56,
    "id": "f663fbf8-dadc-4b87-bb1a-c0fc0ddc2799",
    "metadata": {},
    "outputs": [],
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 57,
    "id": "30d731f1-5410-4a6c-a872-2b157d5da9d8",
    "metadata": {},
    "outputs": [
@@ -801,7 +801,7 @@
        "True"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 58,
    "id": "eddb6a25-ab52-422b-a88e-a21110670c4a",
    "metadata": {},
    "outputs": [],
@@ -875,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 59,
    "id": "bf32d88e-1d5c-437d-bdca-0b23da15af88",
    "metadata": {},
    "outputs": [
@@ -899,7 +899,7 @@
        " 'water']"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -911,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 60,
    "id": "1e6e26a2-33dc-42f6-ab58-76b1ad4844fc",
    "metadata": {},
    "outputs": [],
@@ -927,7 +927,7 @@
     "        \n",
     "        habit = habit.lower()\n",
     "        # non-shrubs\n",
-    "        if 'algae' in habit:\n",
+    "        if 'algae' in habit or 'crust' in habit:\n",
     "            new_habit = 'other'\n",
     "        elif 'moss' in habit or 'liverwort' in habit:\n",
     "            new_habit = 'bryophyte'\n",
@@ -935,7 +935,7 @@
     "            new_habit = 'forb'\n",
     "        elif 'litter' in habit or 'scat' in habit:\n",
     "            new_habit = 'litter'\n",
-    "        elif 'bare ground' in habit or 'crust' in habit or 'mineral' in habit:\n",
+    "        elif 'bare ground' in habit or 'mineral' in habit:\n",
     "            new_habit = 'bare ground'\n",
     "            \n",
     "        # shrubs and trees\n",
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 61,
    "id": "6a3fd17d-ebf9-4855-8c69-ba2ebd85418a",
    "metadata": {},
    "outputs": [
@@ -1035,7 +1035,7 @@
        "168           NaN            NaN        lichen  "
       ]
      },
-     "execution_count": 77,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1061,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 62,
    "id": "7d4008ff-682c-4f8c-83b8-001a75ee608d",
    "metadata": {},
    "outputs": [
@@ -1205,7 +1205,7 @@
        "[2761 rows x 4 columns]"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1216,7 +1216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 63,
    "id": "8602e05c-244d-4f5a-90f0-129181482de6",
    "metadata": {},
    "outputs": [
@@ -1284,7 +1284,7 @@
        "2  120713b1         32.67             Litter        litter           litter"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1302,7 +1302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 64,
    "id": "1db0776d-7904-4a69-b5d5-ff8c0298115c",
    "metadata": {},
    "outputs": [
@@ -1370,7 +1370,7 @@
        "2  120713b1             Litter        litter           litter         32.67"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1385,7 +1385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 65,
    "id": "ec0a2d50-23e6-4a30-b57b-6507c2b29340",
    "metadata": {},
    "outputs": [],
@@ -1396,7 +1396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 66,
    "id": "a861771b-de62-4d13-85bb-364530ecc0e4",
    "metadata": {},
    "outputs": [],
@@ -1409,7 +1409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 67,
    "id": "9e3550cf-b881-46cb-b260-b36c2451b8f4",
    "metadata": {},
    "outputs": [
@@ -1517,7 +1517,7 @@
        "120713b1      14.66    8.66   32.67    0.0    0.0  "
       ]
      },
-     "execution_count": 83,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1532,7 +1532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 68,
    "id": "e73c007a-5d25-49e6-8b30-39ca42435e53",
    "metadata": {},
    "outputs": [],
@@ -1553,7 +1553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 69,
    "id": "6d8b748d-9388-431f-bd10-ccdc1f525476",
    "metadata": {},
    "outputs": [],
@@ -1567,7 +1567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 70,
    "id": "d6d99f14-ca53-4808-a5d0-53f8ad3258f3",
    "metadata": {},
    "outputs": [
@@ -1629,7 +1629,7 @@
        "120718a1    0.0          0.0"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1648,7 +1648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 71,
    "id": "f2ea2ffd-9b16-4cb5-9de4-5f657caf003b",
    "metadata": {},
    "outputs": [],
@@ -1662,7 +1662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 72,
    "id": "b873e7f3-a51e-48b3-9f9a-24daeb6cd272",
    "metadata": {},
    "outputs": [],
@@ -1673,7 +1673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 73,
    "id": "5bd352e9-5a95-4afe-8b46-a44237a6ba2d",
    "metadata": {},
    "outputs": [
@@ -1802,7 +1802,7 @@
        "120713b1    0.0         0.00  "
       ]
      },
-     "execution_count": 89,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1858,7 +1858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 74,
    "id": "dc8850b0-9b38-4626-a0d0-3e4dbaafc208",
    "metadata": {},
    "outputs": [],
@@ -1880,7 +1880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 75,
    "id": "5ffd8ab1-448e-46ba-a040-37731053f54b",
    "metadata": {},
    "outputs": [],
@@ -1894,13 +1894,16 @@
     "new_aux['surveyDay'] = aux['surveyDate'].dt.day\n",
     "\n",
     "# plot size\n",
-    "new_aux['plotRadius'] = 55\n",
+    "radius = 55\n",
+    "area = np.pi * radius**2\n",
+    "new_aux['plotArea'] = area\n",
+    "new_aux['plotShape'] = 'circle'\n",
     "\n",
     "# geographical information\n",
     "new_aux['latitudeY'] = aux['latitude'].astype('Float32')\n",
     "new_aux['longitudeX'] = aux['longitude'].astype('Float32')\n",
     "new_aux['georefSource'] = 'GPS'\n",
-    "new_aux['georefAccuracy'] = np.nan\n",
+    "new_aux['georefAccuracy'] = 3.0\n",
     "new_aux['coordEPSG'] = 'EPSG:4326' # will need to convert from EPSG:4269\n",
     "\n",
     "# main\n",
@@ -1920,7 +1923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 76,
    "id": "2d332108-1d86-4bf0-9788-ebd6f827522c",
    "metadata": {},
    "outputs": [],
@@ -1939,7 +1942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 77,
    "id": "6e5471ca-379d-4792-aee0-4304e58dff89",
    "metadata": {},
    "outputs": [],
@@ -1970,7 +1973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 78,
    "id": "a2bb00f9-ace1-49e5-8e38-9a56581ea1db",
    "metadata": {},
    "outputs": [],
@@ -1993,7 +1996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 79,
    "id": "e4e953f2-c0b0-464c-8daa-695fac09cfa9",
    "metadata": {},
    "outputs": [
@@ -2029,7 +2032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 80,
    "id": "39b5d95c-1498-4918-be5a-50b72ca158c5",
    "metadata": {},
    "outputs": [],
@@ -2062,7 +2065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 81,
    "id": "37273cc5-f43b-4149-89df-f234621ad610",
    "metadata": {},
    "outputs": [
@@ -2073,15 +2076,16 @@
        "       'evergreenTreeCover', 'forbCover', 'graminoidCover',\n",
        "       'nonvascularSumCover', 'bryophyteCover', 'lichenCover', 'litterCover',\n",
        "       'otherCover', 'waterCover', 'baregroundCover', 'surveyYear',\n",
-       "       'surveyMonth', 'surveyDay', 'plotRadius', 'latitudeY', 'longitudeX',\n",
-       "       'georefSource', 'georefAccuracy', 'coordEPSG', 'dataSubsource',\n",
-       "       'dataSource', 'dataSourceHtml', 'dataSubsourceCitation', 'surveyMethod',\n",
-       "       'fcoverScale', 'surveyPurpose', 'geometry', 'adminUnit', 'adminCountry',\n",
-       "       'fireYears', 'bioclimSubzone', 'duplicatedCoords', 'duplicatedDate'],\n",
+       "       'surveyMonth', 'surveyDay', 'plotArea', 'plotShape', 'latitudeY',\n",
+       "       'longitudeX', 'georefSource', 'georefAccuracy', 'coordEPSG',\n",
+       "       'dataSubsource', 'dataSource', 'dataSourceHtml',\n",
+       "       'dataSubsourceCitation', 'surveyMethod', 'fcoverScale', 'surveyPurpose',\n",
+       "       'geometry', 'adminUnit', 'adminCountry', 'fireYears', 'bioclimSubzone',\n",
+       "       'duplicatedCoords', 'duplicatedDate'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2092,7 +2096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 82,
    "id": "61929b2f-a591-4435-82fd-04cd38f050b1",
    "metadata": {},
    "outputs": [],
