--- a/neon/standardize_neon.ipynb
+++ b/neon/standardize_neon.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 1,
    "id": "ebe57879-c575-4632-8e68-74e72fe6f0db",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 2,
    "id": "77548174-b901-4e02-a5bd-d2798e2bf4de",
    "metadata": {},
    "outputs": [],
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 3,
    "id": "4f29916b-7256-4565-a89f-2bc22f72b585",
    "metadata": {},
    "outputs": [],
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 4,
    "id": "ed520418-515e-4d2d-afdd-df7b98227c32",
    "metadata": {},
    "outputs": [],
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 5,
    "id": "fdd4f4c9-1d78-49d4-a105-fc32347e16af",
    "metadata": {},
    "outputs": [
@@ -198,7 +198,7 @@
        "2           0.5  "
       ]
      },
-     "execution_count": 118,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 6,
    "id": "1e81abe9-023a-4ff2-bba7-cdbf0b520822",
    "metadata": {},
    "outputs": [
@@ -273,7 +273,7 @@
        "2  BARR_003.basePlot.div.32.4.1           Eriophorum sp.           0.5"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 7,
    "id": "e4e79b78-a122-46e8-a366-2753060b4f80",
    "metadata": {},
    "outputs": [
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 8,
    "id": "1c5ef908-8ec9-4ad3-820c-d4c248634cca",
    "metadata": {},
    "outputs": [
@@ -416,7 +416,7 @@
        "2  Dillman et al. 2012   species      lichen       lichen  "
       ]
      },
-     "execution_count": 121,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 9,
    "id": "ed04ae66-b596-4bcd-bda4-9819a47be4c6",
    "metadata": {},
    "outputs": [
@@ -482,7 +482,7 @@
        "2           Eriophorum sp."
       ]
      },
-     "execution_count": 122,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 10,
    "id": "7add8ae9-c2f4-491c-bf96-3acde27112b8",
    "metadata": {},
    "outputs": [
@@ -570,7 +570,7 @@
        "2               Eriophorum sp.    Eriophorum sp.    graminoid"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 11,
    "id": "76c312d0-ad0a-4804-9119-cd1c62dc75ab",
    "metadata": {},
    "outputs": [
@@ -647,7 +647,7 @@
        "2           Eriophorum sp.    Eriophorum sp."
       ]
      },
-     "execution_count": 124,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 12,
    "id": "884d6474-fca1-4c9b-a137-20a3612d73cd",
    "metadata": {},
    "outputs": [],
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 13,
    "id": "58dc936e-ef05-48c1-ac28-5a76e7ed2744",
    "metadata": {},
    "outputs": [
@@ -734,7 +734,7 @@
        "2     deciduous  Vaccinium uliginosum"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 14,
    "id": "81c9b832-465e-4139-b2fa-8f0095f078f1",
    "metadata": {},
    "outputs": [
@@ -810,7 +810,7 @@
        "2           Eriophorum sp.    Eriophorum sp.    graminoid              "
       ]
      },
-     "execution_count": 127,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 15,
    "id": "61bc9738-4ace-483f-a883-b78d5225326d",
    "metadata": {},
    "outputs": [
@@ -834,7 +834,7 @@
        "['graminoid', nan, 'forb', 'shrub', 'spore-bearing']"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 16,
    "id": "562082ce-a87b-441f-9aa7-f70489994b8b",
    "metadata": {},
    "outputs": [],
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 17,
    "id": "9fcd3119-39fe-47b8-9b67-b309ef719e74",
    "metadata": {},
    "outputs": [
@@ -880,7 +880,7 @@
        "True"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -934,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 18,
    "id": "f9ba4445-418f-419c-bfc3-5c8f514dd4d2",
    "metadata": {},
    "outputs": [],
@@ -954,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 19,
    "id": "4d3b73f9-b6d8-444b-b21c-1bfc9f365b08",
    "metadata": {},
    "outputs": [
@@ -976,7 +976,7 @@
        " 'water']"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -988,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 20,
    "id": "94664ec4-91b7-479c-9629-6bffdef32a1e",
    "metadata": {},
    "outputs": [],
@@ -1028,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 21,
    "id": "3a982b51-a464-43b4-90d5-f498d4eb1c12",
    "metadata": {},
    "outputs": [
@@ -1112,7 +1112,7 @@
        "29         graminoid           NaN            NaN     graminoid  "
       ]
      },
-     "execution_count": 134,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1138,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 22,
    "id": "cefd30c0-a670-4295-8eef-18f822821599",
    "metadata": {},
    "outputs": [
@@ -1211,7 +1211,7 @@
        "2        graminoid           7.0  "
       ]
      },
-     "execution_count": 135,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1231,7 +1231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 23,
    "id": "f5646d2f-cd44-4a06-9a12-8afbf152c21e",
    "metadata": {},
    "outputs": [],
@@ -1242,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 24,
    "id": "e111d602-d096-440a-b352-b784039274fd",
    "metadata": {},
    "outputs": [],
@@ -1255,7 +1255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 25,
    "id": "98492580-a8a9-47c2-be8d-92f56eb191b0",
    "metadata": {},
    "outputs": [
@@ -1369,7 +1369,7 @@
        "BARR_001.basePlot.div.32.4.1    87.0    0.5    1.0  "
       ]
      },
-     "execution_count": 138,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1393,7 +1393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 26,
    "id": "6791825e-04f8-49f8-b888-e1c6d9049375",
    "metadata": {},
    "outputs": [],
@@ -1408,7 +1408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 27,
    "id": "3966ee2f-2807-487d-92d9-97722da58f66",
    "metadata": {},
    "outputs": [],
@@ -1419,7 +1419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 28,
    "id": "c79f389f-f8f6-44e9-96c4-4ef53c1ff6ca",
    "metadata": {},
    "outputs": [
@@ -1554,7 +1554,7 @@
        "BARR_001.basePlot.div.32.4.1    87.0          0.5    1.0    0.5  "
       ]
      },
-     "execution_count": 141,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1609,7 +1609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 29,
    "id": "715535ea-5ec0-4b56-b463-defcfc3cf678",
    "metadata": {},
    "outputs": [],
@@ -1630,7 +1630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 30,
    "id": "f066abbc-4770-465c-a6e8-8c7930e6ad72",
    "metadata": {},
    "outputs": [],
@@ -1648,7 +1648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 31,
    "id": "f9266660-82eb-49a0-83ea-69ac4d4f16de",
    "metadata": {},
    "outputs": [],
@@ -1662,7 +1662,8 @@
     "new_aux['surveyDay'] = aux['surveyDate'].dt.day.astype(int)\n",
     "\n",
     "# plot size\n",
-    "new_aux['plotRadius'] = 1\n",
+    "new_aux['plotArea'] = 1.0\n",
+    "new_aux['plotShape'] = 'square'\n",
     "\n",
     "# geographical information\n",
     "new_aux['latitudeY'] = aux['subplot_lat'].astype('Float32')\n",
@@ -1689,7 +1690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 32,
    "id": "a67e6dd3-af8d-4f8a-8743-d9ff2de99516",
    "metadata": {},
    "outputs": [],
@@ -1708,7 +1709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 33,
    "id": "cfef4685-4ea1-4fd5-a58c-8e1d6fb4a6b9",
    "metadata": {},
    "outputs": [],
@@ -1739,7 +1740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 34,
    "id": "688c77b4-6af5-4bfb-b560-1f55d21d0a40",
    "metadata": {},
    "outputs": [],
@@ -1762,7 +1763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 35,
    "id": "5401ddc4-7cd5-4610-858d-a19d1d70fac6",
    "metadata": {},
    "outputs": [
@@ -1798,7 +1799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 36,
    "id": "1ccdcfc5-16b2-4ff6-875b-14308687bab7",
    "metadata": {},
    "outputs": [],
@@ -1831,7 +1832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 37,
    "id": "5c118237-5023-4dc2-8e07-fb57196f3c20",
    "metadata": {},
    "outputs": [
@@ -1842,15 +1843,16 @@
        "       'evergreenTreeCover', 'forbCover', 'graminoidCover',\n",
        "       'nonvascularSumCover', 'bryophyteCover', 'lichenCover', 'litterCover',\n",
        "       'baregroundCover', 'waterCover', 'otherCover', 'surveyYear',\n",
-       "       'surveyMonth', 'surveyDay', 'plotRadius', 'latitudeY', 'longitudeX',\n",
-       "       'georefSource', 'georefAccuracy', 'coordEPSG', 'dataSubsource',\n",
-       "       'dataSource', 'dataSourceHtml', 'dataSubsourceCitation', 'surveyMethod',\n",
-       "       'fcoverScale', 'surveyPurpose', 'geometry', 'adminUnit', 'adminCountry',\n",
-       "       'fireYears', 'bioclimSubzone', 'duplicatedCoords', 'duplicatedDate'],\n",
+       "       'surveyMonth', 'surveyDay', 'plotArea', 'plotShape', 'latitudeY',\n",
+       "       'longitudeX', 'georefSource', 'georefAccuracy', 'coordEPSG',\n",
+       "       'dataSubsource', 'dataSource', 'dataSourceHtml',\n",
+       "       'dataSubsourceCitation', 'surveyMethod', 'fcoverScale', 'surveyPurpose',\n",
+       "       'geometry', 'adminUnit', 'adminCountry', 'fireYears', 'bioclimSubzone',\n",
+       "       'duplicatedCoords', 'duplicatedDate'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1861,7 +1863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 38,
    "id": "830f8769-4fc5-4e8b-8085-144522aeae65",
    "metadata": {},
    "outputs": [],
